# muster-mcp

./: Cargo.toml  README.md  clippy.toml  deny.toml
agent/: intent-card.json
src/: backend.rs  main.rs  tools.rs
tests/: acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs
