[package]
name = "muster-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Live-session census as a read-only MCP server — exposes muster census+verdict over MCP stdio"
license = "MIT OR Apache-2.0"
authors = ["Joe Yen <jyen.tech@gmail.com>"]
publish = false

[[bin]]
name = "muster-mcp"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
mcp-core = { path = "../mcp-core" }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
sigpipe = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
